--- a/index.html
+++ b/index.html
@@ -4,8 +4,34 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Rock, Paper, Scissors Game</title>
+  <link rel="stylesheet" href="styles.css"></style>
 </head>
 <body>
-  <script src="index.js"></script>
+  <div class="score">
+    <h1 class="ties">Ties: 0</h1>
+  </div>
+  <div class="winnerDiv">
+    <h1 class="winner"></h1>
+    <button class="reset" onclick="resetGame()">Click to Play Again</button>
+  </div>
+  <div class="playerSection">
+    <h3 class="playerChoice"></h3>
+    <h3 class="playerScore">Score: 0</h3>
+    <div class="playerImgs">
+      <img src="/images/rock.jpeg" alt="Rock" class="playerImg" id="rock">
+      <img src="/images/paper.jpeg" alt="Paper" class="playerImg" id="paper">
+      <img src="/images/scissors.jpeg" alt="Scissors" class="playerImg" id="scissors">
+    </div>
+  </div>
+  <div class="computerSection">
+    <h3 class="computerChoice"></h3>
+    <h3 class="computerScore">Score: 0</h3>
+    <div class="computerImgs">
+      <img src="/images/rock.jpeg" alt="Rock" class="rock">
+      <img src="/images/paper.jpeg" alt="Paper" class="rock">
+      <img src="/images/scissors.jpeg" alt="Scissors" class="scissors">
+    </div>
+  </div>
 </body>
+<script src="index.js"></script>
 </html>
